--- a/app/src/main/res/layout/activity_profile_edit.xml
+++ b/app/src/main/res/layout/activity_profile_edit.xml
@@ -82,7 +82,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="@dimen/_5sdp"
                     android:layout_marginTop="@dimen/_10sdp"
-                    android:text="@string/name"
+                    android:text="Name *"
                     android:textColor="@color/black"
                     android:fontFamily="@font/nunito_sans_semibold"
                     app:layout_constraintStart_toStartOf="parent"
@@ -110,7 +110,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="@dimen/_5sdp"
                     android:layout_marginTop="@dimen/_8sdp"
-                    android:text="@string/email"
+                    android:text="Email *"
                     android:textColor="@color/black"
                     android:fontFamily="@font/nunito_sans_semibold"
                     app:layout_constraintStart_toStartOf="@+id/etBusinessName"
@@ -170,7 +170,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="@dimen/_5sdp"
                     android:layout_marginTop="@dimen/_8sdp"
-                    android:text="@string/phone"
+                    android:text="Phone *"
                     android:textColor="@color/black"
                     android:fontFamily="@font/nunito_sans_semibold"
                     app:layout_constraintStart_toStartOf="@+id/etBusinessName"
