--- a/app/src/main/res/layout/activity_add_business.xml
+++ b/app/src/main/res/layout/activity_add_business.xml
@@ -54,7 +54,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Business Logo"
+                        android:text="Business Logo *"
                         android:layout_marginTop="10dp"
                         android:textColor="@color/black"
                         android:textStyle="bold"
@@ -249,7 +249,7 @@
                     android:layout_marginStart="@dimen/_5sdp"
                     android:layout_marginTop="@dimen/_5sdp"
                     android:fontFamily="@font/nunito_sans_semibold"
-                    android:text="@string/business_categories"
+                    android:text="Business Categories *"
                     android:textColor="@color/black"
                     app:layout_constraintStart_toStartOf="@+id/etBusinessName"
                     app:layout_constraintTop_toBottomOf="@+id/etBusinessNumber"
