--- a/app/src/main/res/layout/activity_edit_political_profile_details.xml
+++ b/app/src/main/res/layout/activity_edit_political_profile_details.xml
@@ -281,6 +281,86 @@
                 android:layout_weight="1" />
         </LinearLayout>
 
+        <!--        Uploaded photo-->
+        <LinearLayout
+            android:id="@+id/lay_uploaded_photo"
+            android:layout_width="fill_parent"
+            android:layout_height="50dp"
+            android:layout_above="@+id/nsw"
+            android:layout_centerHorizontal="true"
+            android:background="@color/dialog_color"
+            android:orientation="vertical"
+            android:paddingHorizontal="15dp"
+            android:visibility="gone">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <!--                <LinearLayout-->
+                <!--                    android:id="@+id/profilePhotoShowLL"-->
+                <!--                    android:layout_width="wrap_content"-->
+                <!--                    android:layout_height="wrap_content"-->
+                <!--                    android:layout_marginVertical="10dp"-->
+                <!--                    android:background="@drawable/box_shape_show"-->
+                <!--                    android:orientation="horizontal"-->
+                <!--                    android:padding="5dp">-->
+
+                <!--                    <TextView-->
+                <!--                        android:id="@+id/profilePhotoShowtv"-->
+                <!--                        android:layout_width="wrap_content"-->
+                <!--                        android:layout_height="wrap_content"-->
+                <!--                        android:layout_marginHorizontal="5dp"-->
+                <!--                        android:text="Show"-->
+                <!--                        android:textColor="@color/iconColor"-->
+                <!--                        android:textSize="16dp" />-->
+
+                <!--                    <ImageView-->
+                <!--                        android:id="@+id/visibleProfilePhotoEyeIcon"-->
+                <!--                        android:layout_width="24dp"-->
+                <!--                        android:layout_height="24dp"-->
+                <!--                        android:layout_marginHorizontal="5dp"-->
+                <!--                        android:src="@drawable/baseline_remove_red_eye_24" />-->
+
+                <!--                    <ImageView-->
+                <!--                        android:id="@+id/hideProfilePhotoEyeIcon"-->
+                <!--                        android:layout_width="24dp"-->
+                <!--                        android:layout_height="24dp"-->
+                <!--                        android:layout_marginHorizontal="5dp"-->
+                <!--                        android:src="@drawable/baseline_visibility_off_24"-->
+                <!--                        android:visibility="gone" />-->
+
+                <!--                </LinearLayout>-->
+                <ImageView
+                    android:id="@+id/uploadedFlipIv"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="5dp"
+                    android:src="@drawable/baseline_flip_camera_android_24"/>
+
+            </LinearLayout>
+
+
+            <!--            <View-->
+            <!--                android:layout_width="1dp"-->
+            <!--                android:layout_height="0dp"-->
+            <!--                android:layout_weight="1" />-->
+            <!--            <SeekBar-->
+            <!--                android:id="@+id/seekBarProfilePhoto"-->
+            <!--                android:max="15"-->
+            <!--                android:progress="6"-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="wrap_content"/>-->
+            <!--            <View-->
+            <!--                android:layout_width="1dp"-->
+            <!--                android:layout_height="0dp"-->
+            <!--                android:layout_weight="1" />-->
+        </LinearLayout>
+
+
+
         <!--party_photo-->
         <LinearLayout
             android:id="@+id/lay_party_photo"
@@ -343,6 +423,8 @@
                 android:layout_height="0dp"
                 android:layout_weight="1" />
         </LinearLayout>
+
+
 
         <!--Name-->
         <LinearLayout
@@ -1223,7 +1305,56 @@
                         android:scaleType="centerCrop"
                         android:src="@drawable/frame_three"
                         android:visibility="visible"/>
-
+                    <ImageView
+                        android:id="@+id/iv_logoL141"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:layout_marginHorizontal="5dp"
+                        android:adjustViewBounds="true"
+                        android:padding="3dp"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/frame_four"
+                        android:visibility="visible"/>
+                    <ImageView
+                        android:id="@+id/iv_logoL151"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:layout_marginHorizontal="5dp"
+                        android:adjustViewBounds="true"
+                        android:padding="3dp"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/frame_five"
+                        android:visibility="visible"/>
+                    <ImageView
+                        android:id="@+id/iv_logoL161"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:layout_marginHorizontal="5dp"
+                        android:adjustViewBounds="true"
+                        android:padding="3dp"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/frame_six"
+                        android:visibility="visible"/>
+                    <ImageView
+                        android:id="@+id/iv_logoL171"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:layout_marginHorizontal="5dp"
+                        android:adjustViewBounds="true"
+                        android:padding="3dp"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/frame_seven"
+                        android:visibility="visible"/>
+                    <ImageView
+                        android:id="@+id/iv_logoL181"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:layout_marginHorizontal="5dp"
+                        android:adjustViewBounds="true"
+                        android:padding="3dp"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/frame_eight"
+                        android:visibility="visible"/>
 
 
 
@@ -1452,6 +1583,33 @@
                             android:layout_height="wrap_content"
                             android:paddingHorizontal="10dp"
                             android:text="Profile Photo" />
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <!--        Selected Photo-->
+                <LinearLayout
+                    android:id="@+id/uploadedPhoto"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:visibility="gone"
+                    android:paddingHorizontal="5dp"
+                    android:paddingVertical="@dimen/_5sdp">
+
+                    <LinearLayout
+                        android:id="@+id/uploadedPhotoLine"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/box_shape_show_gray"
+                        android:padding="5dp">
+
+                        <TextView
+                            android:id="@+id/uploadedPhotoTv"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:paddingHorizontal="10dp"
+                            android:text="Uploaded Photo" />
                     </LinearLayout>
 
                 </LinearLayout>
