--- a/app/src/main/res/layout/grid_assets_main.xml
+++ b/app/src/main/res/layout/grid_assets_main.xml
@@ -16,29 +16,28 @@
             android:layout_width="fill_parent"
             android:layout_height="@dimen/_30sdp"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="@dimen/_15sdp"
-            android:layout_toLeftOf="@id/txtDownloadFont"
+
             android:gravity="center"
             android:lines="1"
             android:text="Tap to Select font"
             android:textColor="@color/black"
-            android:textSize="@dimen/_14sdp" />
+            android:textSize="@dimen/_10sdp" />
 
-        <ImageView
-            android:id="@+id/txtDownloadFont"
-            android:layout_width="@dimen/_40sdp"
-            android:layout_height="@dimen/_30sdp"
-            android:layout_alignParentRight="true"
-            android:padding="@dimen/_5sdp"
-            android:src="@drawable/ic_download_sticker" />
+<!--        <ImageView-->
+<!--            android:id="@+id/txtDownloadFont"-->
+<!--            android:layout_width="@dimen/_40sdp"-->
+<!--            android:layout_height="@dimen/_30sdp"-->
+<!--            android:layout_alignParentRight="true"-->
+<!--            android:padding="@dimen/_5sdp"-->
+<!--            android:src="@drawable/ic_download_sticker" />-->
 
-        <ProgressBar
-            android:id="@+id/downloadProgress"
-            android:layout_width="@dimen/_20sdp"
-            android:layout_height="@dimen/_20sdp"
-            android:layout_alignParentRight="true"
-            android:layout_centerInParent="true"
-            android:layout_marginRight="@dimen/_9sdp"
-            android:visibility="gone" />
+<!--        <ProgressBar-->
+<!--            android:id="@+id/downloadProgress"-->
+<!--            android:layout_width="@dimen/_20sdp"-->
+<!--            android:layout_height="@dimen/_20sdp"-->
+<!--            android:layout_alignParentRight="true"-->
+<!--            android:layout_centerInParent="true"-->
+<!--            android:layout_marginRight="@dimen/_9sdp"-->
+<!--            android:visibility="gone" />-->
     </RelativeLayout>
 </LinearLayout>
