--- a/app/src/main/res/layout/political_frame_3.xml
+++ b/app/src/main/res/layout/political_frame_3.xml
@@ -120,7 +120,7 @@
                 android:layout_height="@dimen/_90sdp"
                 android:layout_gravity="bottom|left"
                 android:adjustViewBounds="true"
-                android:scaleType="centerCrop"
+                android:scaleType="fitCenter"
                 android:src="@mipmap/ic_launcher_foreground" />
             <View
                 android:layout_width="0dp"
@@ -132,7 +132,7 @@
                 android:layout_height="65dp"
                 android:layout_gravity="bottom|right"
                 android:adjustViewBounds="true"
-                android:scaleType="centerCrop"
+                android:scaleType="fitCenter"
                 android:src="@mipmap/ic_launcher_foreground"
                 android:visibility="visible" />
         </LinearLayout>
