--- a/app/src/main/res/layout/political_frame_4.xml
+++ b/app/src/main/res/layout/political_frame_4.xml
@@ -118,7 +118,7 @@
                 android:layout_height="@dimen/_90sdp"
                 android:layout_gravity="bottom|right"
                 android:adjustViewBounds="true"
-                android:scaleType="centerCrop"
+                android:scaleType="fitCenter"
                 android:src="@mipmap/ic_launcher_foreground"
                 android:visibility="visible" />
         </LinearLayout>
