--- a/app/src/main/res/layout/activity_edit_business_profile_details.xml
+++ b/app/src/main/res/layout/activity_edit_business_profile_details.xml
@@ -147,10 +147,14 @@
         android:layout_height="390dp"
         android:layout_below="@id/header"
         android:layout_margin="10dp">
-        <com.github.chrisbanes.photoview.PhotoView
+<!--        <com.github.chrisbanes.photoview.PhotoView-->
+<!--            android:id="@+id/photoView"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"/>-->
+        <ImageView
             android:id="@+id/photoView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_width="200dp"
+            android:layout_height="200dp"/>
         <RelativeLayout
             android:id="@+id/constraint"
             android:layout_width="fill_parent"
@@ -208,6 +212,77 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_weight="1"/>
+    <LinearLayout
+        android:id="@+id/textPhotoAddll"
+        android:layout_above="@+id/bottomLay"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical">
+        <HorizontalScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fadeScrollbars="true"
+            android:visibility="visible">
+            <LinearLayout
+                android:layout_marginVertical="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_gravity="start"
+                >
+                <LinearLayout
+                    android:id="@+id/add_photoLL"
+                    android:layout_marginLeft="10dp"
+                    android:layout_width="fill_parent"
+
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/box_shape_show_gray"
+                    android:padding="5dp">
+
+                    <TextView
+                        android:id="@+id/add_photoTV"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingHorizontal="10dp"
+                        android:text="Add Photo" />
+                </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/add_textLL"
+                    android:layout_marginLeft="10dp"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/box_shape_show_gray"
+                    android:padding="5dp">
+
+                    <TextView
+                        android:id="@+id/add_textTV"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingHorizontal="10dp"
+                        android:text="Add Text" />
+                </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/add_StickerLL"
+                    android:layout_marginLeft="10dp"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/box_shape_show_gray"
+                    android:padding="5dp">
+
+                    <TextView
+                        android:id="@+id/add_StickerTv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingHorizontal="10dp"
+                        android:text="Add Sticker" />
+
+                </LinearLayout>
+
+
+            </LinearLayout>
+        </HorizontalScrollView>
+    </LinearLayout>
     <LinearLayout
         android:id="@+id/bottomLay"
         android:layout_width="fill_parent"
@@ -1328,6 +1403,50 @@
 
 
         </LinearLayout>
+
+        <!--            Edit Text-->
+        <LinearLayout
+            android:id="@+id/lay_editText"
+            android:layout_width="fill_parent"
+            android:layout_height="90dp"
+            android:layout_above="@+id/nsw"
+            android:layout_centerHorizontal="true"
+            android:background="@color/dialog_color"
+            android:orientation="vertical"
+            android:visibility="gone"
+            android:paddingHorizontal="15dp"
+            >
+            <LinearLayout android:layout_width="fill_parent"
+                android:layout_height="wrap_content">
+                <EditText
+                    android:id="@+id/etText"
+                    android:layout_width="250dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_3sdp"
+                    android:background="@drawable/edit_bg"
+                    android:text="संस्कृती डिझाइन"
+                    android:textColorHint="@color/gray"
+                    android:lines="2"
+                    android:scrollbars="vertical"
+                    android:inputType="textMultiLine"
+                    android:paddingHorizontal="@dimen/_5sdp"
+                    android:paddingVertical="@dimen/_3sdp"/>
+                <TextView
+                    android:id="@+id/btn_save"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:paddingVertical="8dp"
+                    android:paddingHorizontal="10dp"
+                    android:background="@drawable/round_bg"
+                    android:backgroundTint="@color/active_color"
+                    android:text="Add"
+                    android:textSize="@dimen/_10sdp"
+                    android:textAllCaps="false"
+                    android:textColor="@color/al_white"
+                    android:fontFamily="@font/nunito_sans_semibold"/>
+            </LinearLayout>
+        </LinearLayout>
         <!--Sticker-->
         <LinearLayout
             android:id="@+id/lay_sticker"
@@ -1339,12 +1458,21 @@
             android:gravity="center"
             android:visibility="gone"
             android:orientation="vertical">
-
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerViewSticker"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true"
+                android:scrollbars="horizontal"
+                tools:listitem="@layout/sticker_item"
+                android:padding="5dp"/>
 
 
             <HorizontalScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:visibility="gone">
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
