--- a/app/src/main/res/layout/activity_edit_personal_profile_details.xml
+++ b/app/src/main/res/layout/activity_edit_personal_profile_details.xml
@@ -146,10 +146,26 @@
         android:layout_height="390dp"
         android:layout_below="@id/header"
         android:layout_margin="10dp">
-        <com.github.chrisbanes.photoview.PhotoView
-            android:id="@+id/photoView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+<!--        <com.github.chrisbanes.photoview.PhotoView-->
+<!--            android:id="@+id/photoView"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"/>-->
+        <LinearLayout
+            android:id="@+id/photoViewll"
+            android:layout_width="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/photoView"
+                android:layout_width="225dp"
+                android:layout_height="225dp"/>
+            <ImageView
+                android:id="@+id/photoViewFlip"
+                android:visibility="gone"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/sticker_flip"/>
+        </LinearLayout>
         <RelativeLayout
             android:id="@+id/constraint"
             android:layout_width="fill_parent"
@@ -167,6 +183,33 @@
                     <include
                         android:id="@+id/toolbar"
                         layout="@layout/political_frame_1"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/thumb"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center|center_vertical"
+                    android:orientation="vertical">
+                    <ImageView
+                        android:id="@+id/leftThumbnailImage"
+                        android:layout_width="10dp"
+                        android:layout_height="50dp"
+                        android:visibility="gone"
+                        android:layout_gravity="start" />
+
+                    <ImageView
+                        android:id="@+id/centerThumbnailImage"
+                        android:layout_width="10dp"
+                        android:layout_height="50dp"
+                        android:visibility="gone"
+                        android:layout_gravity="center"/>
+
+                    <ImageView
+                        android:id="@+id/rightThumbnailImage"
+                        android:layout_width="10dp"
+                        android:layout_height="50dp"
+                        android:visibility="gone"
+                        android:layout_gravity="end" />
                 </LinearLayout>
 
             </RelativeLayout>
@@ -193,6 +236,79 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_weight="1"/>
+
+    <LinearLayout
+        android:id="@+id/textPhotoAddll"
+        android:layout_above="@+id/bottomLay"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical">
+        <HorizontalScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fadeScrollbars="true"
+            android:visibility="visible">
+            <LinearLayout
+                android:layout_marginVertical="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_gravity="start"
+                >
+                <LinearLayout
+                    android:id="@+id/add_photoLL"
+                    android:layout_marginLeft="10dp"
+                    android:layout_width="fill_parent"
+
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/box_shape_show_gray"
+                    android:padding="5dp">
+
+                    <TextView
+                        android:id="@+id/add_photoTV"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingHorizontal="10dp"
+                        android:text="Add Photo" />
+                </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/add_textLL"
+                    android:layout_marginLeft="10dp"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/box_shape_show_gray"
+                    android:padding="5dp">
+
+                    <TextView
+                        android:id="@+id/add_textTV"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingHorizontal="10dp"
+                        android:text="Add Text" />
+                </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/add_StickerLL"
+                    android:layout_marginLeft="10dp"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/box_shape_show_gray"
+                    android:padding="5dp">
+
+                    <TextView
+                        android:id="@+id/add_StickerTv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingHorizontal="10dp"
+                        android:text="Add Sticker" />
+
+                </LinearLayout>
+
+
+            </LinearLayout>
+        </HorizontalScrollView>
+    </LinearLayout>
+
     <LinearLayout
         android:id="@+id/bottomLay"
         android:layout_width="fill_parent"
@@ -1262,6 +1378,16 @@
                     android:orientation="horizontal"
                     android:padding="5dp">
                     <ImageView
+                        android:id="@+id/iv_logoL000"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:layout_marginHorizontal="5dp"
+                        android:adjustViewBounds="true"
+                        android:padding="3dp"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/blank_frame"
+                        android:visibility="visible"/>
+                    <ImageView
                         android:id="@+id/iv_logoL101"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
@@ -1352,6 +1478,51 @@
 
 
         </LinearLayout>
+
+        <!--            Edit Text-->
+        <LinearLayout
+            android:id="@+id/lay_editText"
+            android:layout_width="fill_parent"
+            android:layout_height="90dp"
+            android:layout_above="@+id/nsw"
+            android:layout_centerHorizontal="true"
+            android:background="@color/dialog_color"
+            android:orientation="vertical"
+            android:visibility="gone"
+            android:paddingHorizontal="15dp"
+            >
+            <LinearLayout android:layout_width="fill_parent"
+                android:layout_height="wrap_content">
+                <EditText
+                    android:id="@+id/etText"
+                    android:layout_width="250dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_3sdp"
+                    android:background="@drawable/edit_bg"
+                    android:text="संस्कृती डिझाइन"
+                    android:textColorHint="@color/gray"
+                    android:lines="2"
+                    android:scrollbars="vertical"
+                    android:inputType="textMultiLine"
+                    android:paddingHorizontal="@dimen/_5sdp"
+                    android:paddingVertical="@dimen/_3sdp"/>
+                <TextView
+                    android:id="@+id/btn_save"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:paddingVertical="8dp"
+                    android:paddingHorizontal="10dp"
+                    android:background="@drawable/round_bg"
+                    android:backgroundTint="@color/active_color"
+                    android:text="Add"
+                    android:textSize="@dimen/_10sdp"
+                    android:textAllCaps="false"
+                    android:textColor="@color/al_white"
+                    android:fontFamily="@font/nunito_sans_semibold"/>
+            </LinearLayout>
+        </LinearLayout>
+
         <!--Sticker-->
         <LinearLayout
             android:id="@+id/lay_sticker"
@@ -1364,11 +1535,44 @@
             android:visibility="gone"
             android:orientation="vertical">
 
+            <LinearLayout
+                android:id="@+id/stickerLayoutCat"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingVertical="@dimen/_2sdp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerViewStickerCat"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginVertical="@dimen/_5sdp"
+                    android:layout_marginStart="@dimen/_5sdp"
+                    android:orientation="horizontal"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    tools:listitem="@layout/sticker_category_item" />
+
+            </LinearLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerViewSticker"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true"
+                android:scrollbars="horizontal"
+                tools:listitem="@layout/sticker_item"
+                android:padding="5dp"/>
 
 
             <HorizontalScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:visibility="gone">
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
