--- a/app/src/main/res/layout/activity_edit_political_profile_details.xml
+++ b/app/src/main/res/layout/activity_edit_political_profile_details.xml
@@ -6,6 +6,7 @@
     android:layout_height="fill_parent"
     android:background="@color/grey_20"
     android:keepScreenOn="true"
+    tools:viewBindingIgnore="true"
     tools:context=".ui.activities.EditPoliticalProfileDetailsActivity">
 
     <RelativeLayout
@@ -149,10 +150,27 @@
 <!--            android:id="@+id/photoView"-->
 <!--            android:layout_width="150dp"-->
 <!--            android:layout_height="150dp"/>-->
-        <com.easystudio.rotateimageview.RotateZoomImageView
+<!--        <com.easystudio.rotateimageview.RotateZoomImageView-->
+<!--            android:id="@+id/photoView"-->
+<!--            android:layout_width="150dp"-->
+<!--            android:layout_height="200dp" />-->
+        <LinearLayout
+            android:id="@+id/photoViewll"
+            android:layout_width="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_height="wrap_content">
+        <ImageView
             android:id="@+id/photoView"
-            android:layout_width="150dp"
-            android:layout_height="200dp" />
+            android:layout_width="225dp"
+            android:layout_height="225dp"/>
+            <ImageView
+                android:id="@+id/photoViewFlip"
+                android:visibility="gone"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/sticker_flip"/>
+        </LinearLayout>
+
         <RelativeLayout
             android:id="@+id/constraint"
             android:layout_width="fill_parent"
@@ -170,6 +188,33 @@
                     <include
                         android:id="@+id/toolbar"
                         layout="@layout/political_frame_1"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/thumb"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center|center_vertical"
+                    android:orientation="vertical">
+                    <ImageView
+                        android:id="@+id/leftThumbnailImage"
+                        android:layout_width="10dp"
+                        android:layout_height="50dp"
+                        android:visibility="gone"
+                        android:layout_gravity="start" />
+
+                    <ImageView
+                        android:id="@+id/centerThumbnailImage"
+                        android:layout_width="10dp"
+                        android:layout_height="50dp"
+                        android:visibility="gone"
+                        android:layout_gravity="center"/>
+
+                    <ImageView
+                        android:id="@+id/rightThumbnailImage"
+                        android:layout_width="10dp"
+                        android:layout_height="50dp"
+                        android:visibility="gone"
+                        android:layout_gravity="end" />
                 </LinearLayout>
 
             </RelativeLayout>
@@ -198,6 +243,7 @@
 
         </RelativeLayout>
 
+
     </RelativeLayout>
 
 
@@ -208,6 +254,23 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        <LinearLayout
+            android:id="@+id/contact_whatsapp"
+            android:layout_marginLeft="10dp"
+            android:layout_width="wrap_content"
+            android:layout_above="@+id/textPhotoAddll"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/box_shape_show_gray"
+            android:visibility="gone"
+            android:padding="5dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingHorizontal="10dp"
+                android:text="Order Special Frame" />
+        </LinearLayout>
 
         <LinearLayout
             android:id="@+id/textPhotoAddll"
@@ -275,21 +338,7 @@
                         android:text="Add Sticker" />
 
                 </LinearLayout>
-                <LinearLayout
-                    android:id="@+id/add_bgImage"
-                    android:layout_marginLeft="10dp"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/box_shape_show_gray"
-                    android:padding="5dp">
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingHorizontal="10dp"
-                        android:text="Add Background Image" />
-
-                </LinearLayout>
 
             </LinearLayout>
         </HorizontalScrollView>
@@ -1275,7 +1324,6 @@
                             android:adjustViewBounds="true"
                             android:padding="3dp"
                             android:scaleType="centerCrop"
-                            android:background="@drawable/images_background"
                             android:src="@drawable/demo_img"
                             android:visibility="visible"/>
                         <ImageView
@@ -1285,7 +1333,6 @@
                             android:layout_marginHorizontal="5dp"
                             android:adjustViewBounds="true"
                             android:padding="3dp"
-                            android:background="@drawable/images_background"
                             android:scaleType="centerCrop"
                             android:src="@drawable/demo_img"
                             android:visibility="visible"/>
@@ -1296,7 +1343,6 @@
                             android:layout_marginHorizontal="5dp"
                             android:adjustViewBounds="true"
                             android:padding="3dp"
-                            android:background="@drawable/images_background"
                             android:scaleType="centerCrop"
                             android:src="@drawable/demo_img"
                             android:visibility="visible"/>
@@ -1308,7 +1354,6 @@
                             android:adjustViewBounds="true"
                             android:padding="3dp"
                             android:scaleType="centerCrop"
-                            android:background="@drawable/images_background"
                             android:src="@drawable/demo_img"
                             android:visibility="visible"/>
                         <ImageView
@@ -1318,7 +1363,6 @@
                             android:layout_marginHorizontal="5dp"
                             android:adjustViewBounds="true"
                             android:padding="3dp"
-                            android:background="@drawable/images_background"
                             android:scaleType="centerCrop"
                             android:src="@drawable/demo_img"
                             android:visibility="visible"/>
@@ -1328,7 +1372,6 @@
                             android:layout_height="100dp"
                             android:layout_marginHorizontal="5dp"
                             android:padding="3dp"
-                            android:background="@drawable/images_background"
                             android:adjustViewBounds="true"
                             android:scaleType="centerCrop"
                             android:src="@drawable/demo_img"
@@ -1408,8 +1451,8 @@
                             android:adjustViewBounds="true"
                             android:padding="3dp"
                             android:scaleType="centerCrop"
-                            android:src="@drawable/frame_three"
-                            android:visibility="gone"/>
+                            android:src="@drawable/blank_frame"
+                            android:visibility="visible"/>
                         <ImageView
                             android:id="@+id/iv_logoL141"
                             android:layout_width="100dp"
@@ -1602,7 +1645,7 @@
         <LinearLayout
             android:id="@+id/lay_editText"
             android:layout_width="fill_parent"
-            android:layout_height="180dp"
+            android:layout_height="90dp"
             android:layout_above="@+id/nsw"
             android:layout_centerHorizontal="true"
             android:background="@color/dialog_color"
@@ -1618,7 +1661,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_3sdp"
                     android:background="@drawable/edit_bg"
-                    android:text="Sanskruti Design"
+                    android:text="संस्कृती डिझाइन"
                     android:textColorHint="@color/gray"
                     android:lines="2"
                     android:scrollbars="vertical"
@@ -1640,116 +1683,6 @@
                     android:textColor="@color/al_white"
                     android:fontFamily="@font/nunito_sans_semibold"/>
                 </LinearLayout>
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="100dp"
-                android:layout_marginRight="17dp"
-                android:gravity="center">
-
-                <LinearLayout
-                    android:layout_width="fill_parent"
-                    android:layout_height="125dp"
-                    android:gravity="center">
-
-                    <ImageView
-                        android:id="@+id/btnAlignLeft"
-                        android:layout_width="35dp"
-                        android:layout_height="35dp"
-                        android:layout_marginRight="5dp"
-                        android:background="@drawable/buttonbackground"
-                        android:onClick="onClick"
-                        android:padding="5dp"
-                        android:visibility="gone"
-                        android:src="@drawable/baseline_format_bold_24" />
-
-
-                    <ImageView
-                        android:id="@+id/btnAlignCenter"
-                        android:layout_width="35dp"
-                        android:layout_height="35dp"
-                        android:layout_marginRight="5dp"
-                        android:background="@drawable/buttonbackground"
-                        android:onClick="onClick"
-                        android:padding="5dp"
-                        android:visibility="gone"
-                        android:src="@drawable/baseline_format_underlined_24" />
-
-                    <ImageView
-                        android:id="@+id/btnAlignRight"
-                        android:layout_width="35dp"
-                        android:layout_height="35dp"
-                        android:layout_marginRight="5dp"
-                        android:background="@drawable/buttonbackground"
-                        android:onClick="onClick"
-                        android:padding="5dp"
-                        android:visibility="gone"
-                        android:src="@drawable/baseline_format_italic_24" />
-
-                    <LinearLayout
-                        android:id="@+id/addTextColor"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:gravity="center">
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="A"
-                            android:textStyle="bold"
-                            android:textSize="17dp"
-                            android:textColor="@color/black"
-                            android:layout_marginHorizontal="5dp"/>
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Color"
-                            android:textSize="12dp"
-                            android:textColor="@color/black"
-                            android:layout_marginHorizontal="5dp"/>
-                    </LinearLayout>
-                    <LinearLayout
-                        android:id="@+id/addTextFontll"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:gravity="center">
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Ff"
-                            android:textStyle="bold"
-                            android:textSize="17dp"
-                            android:textColor="@color/black"
-                            android:layout_marginHorizontal="5dp"/>
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Font"
-                            android:textSize="12dp"
-                            android:textColor="@color/black"
-                            android:layout_marginHorizontal="5dp"/>
-                    </LinearLayout>
-
-                    <GridView
-                        android:id="@+id/add_text_gridview_name"
-                        android:layout_width="fill_parent"
-                        android:layout_height="fill_parent"
-                        android:layout_margin="4.0dip"
-                        android:horizontalSpacing="2.0dip"
-                        android:numColumns="1"
-                        android:stretchMode="columnWidth"
-                        android:verticalSpacing="2.0dip"
-                        android:visibility="visible" />
-                </LinearLayout>
-
-
-            </LinearLayout>
-            <SeekBar
-                android:id="@+id/seekBarAddText"
-                android:max="20"
-                android:progress="5"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
         </LinearLayout>
 
             <!--Sticker-->
@@ -1763,13 +1696,47 @@
                 android:gravity="center"
                 android:visibility="gone"
                 android:orientation="vertical">
+                <LinearLayout
+                    android:id="@+id/stickerLayoutCat"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:paddingVertical="@dimen/_2sdp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/recyclerViewStickerCat"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginVertical="@dimen/_5sdp"
+                        android:layout_marginStart="@dimen/_5sdp"
+                        android:orientation="horizontal"
+                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                        tools:listitem="@layout/sticker_category_item" />
+
+                </LinearLayout>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerViewSticker"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_centerHorizontal="true"
+                    android:scrollbars="horizontal"
+                    tools:listitem="@layout/sticker_item"
+                    android:padding="5dp"/>
 
 
 
                 <HorizontalScrollView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:visibility="gone">
                     <LinearLayout
+                        android:id="@+id/sticker_ll"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginVertical="10dp"
@@ -1893,6 +1860,7 @@
                 android:visibility="visible">
 
                 <LinearLayout
+                    android:id="@+id/bottom_buttons"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="@dimen/_5sdp"
