--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -353,7 +353,8 @@
                         android:layout_marginTop="@dimen/_5sdp"
                         android:background="@drawable/login_bg"
                         android:gravity="center|start"
-                        android:orientation="horizontal">
+                        android:orientation="horizontal"
+                        android:visibility="gone">
 
                         <ImageView
 
