--- a/app/src/main/res/layout/activity_poster_editor.xml
+++ b/app/src/main/res/layout/activity_poster_editor.xml
@@ -2,9 +2,11 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@color/grey_20"
+    tools:viewBindingIgnore="true"
     android:keepScreenOn="true">
 
     <RelativeLayout
