--- a/app/src/main/res/layout/activity_edit_political_profile_details.xml
+++ b/app/src/main/res/layout/activity_edit_political_profile_details.xml
@@ -246,7 +246,24 @@
 
     </RelativeLayout>
 
+    <LinearLayout
+        android:id="@+id/contact_whatsapp"
+        android:layout_marginLeft="10dp"
+        android:layout_width="wrap_content"
+        android:layout_below="@+id/constraintTwo"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/share_bg"
+        android:visibility="gone"
+        android:padding="5dp">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingHorizontal="10dp"
+            android:text="Order Special Frame"
+            android:textColor="@color/al_white"/>
+    </LinearLayout>
     <View
         android:layout_width="wrap_content"
         android:layout_height="0dp"
@@ -254,23 +271,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <LinearLayout
-            android:id="@+id/contact_whatsapp"
-            android:layout_marginLeft="10dp"
-            android:layout_width="wrap_content"
-            android:layout_above="@+id/textPhotoAddll"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:background="@drawable/box_shape_show_gray"
-            android:visibility="gone"
-            android:padding="5dp">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingHorizontal="10dp"
-                android:text="Order Special Frame" />
-        </LinearLayout>
 
         <LinearLayout
             android:id="@+id/textPhotoAddll"
