--- a/app/src/main/res/layout/item_home_festival.xml
+++ b/app/src/main/res/layout/item_home_festival.xml
@@ -3,19 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-
     <data>
-
         <variable
             name="festivalData"
             type="com.sanskruti.volotek.model.FestivalItem" />
-
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-      >
+        android:layout_height="wrap_content">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
@@ -44,10 +40,6 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-
-
-
-
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
 
@@ -60,10 +52,14 @@
             android:maxLines="1"
             android:layout_marginTop="5dp"
             android:text="@{festivalData.name}"
-            android:textColor="@color/black"
+            android:textColor="@color/red_900"
             app:fonts='@{"bold"}'
+            android:fontFamily="@font/nunito_sans_semibold"
             app:layout_constraintTop_toBottomOf="@+id/cardView"
-            app:textSize='@{"font_body_xxs_size"}' />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:textSize='@{"font_body_xs_size"}' />
+
         <TextView
             android:id="@+id/txt_fest_date"
             android:layout_width="@dimen/_90sdp"
@@ -71,11 +67,14 @@
             android:ellipsize="end"
             android:gravity="center"
             android:maxLines="1"
-            android:layout_marginTop="5dp"
-            android:text="@{festivalData.date}"
+            android:layout_marginTop="1dp"
+            app:formattedDate="@{festivalData.date}"
             android:textColor="@color/active_color"
             app:fonts='@{"bold"}'
+            android:fontFamily="@font/nunito_sans_semibold"
             app:layout_constraintTop_toBottomOf="@+id/txt_fest_name"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:textSize='@{"font_body_xxs_size"}' />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
